# clu

./: .gitignore  CMakeLists.txt  LICENSE  LinuxBuildInstructions.txt  README.md  WindowsBuildInstructions.txt  clu.sln
clu/: CMakeLists.txt  CommandLineUtility.cpp  ReleaseNotes.txt  build.cmd  clu.vcxproj  clu.vcxproj.filters
clu/CommandLineHandlers/: CommandLineHandler.cpp  CommandLineHandler.h  InputFileOperatorCommandLine.h  PredicateCommandLineHandler.h  SingleCommandLineHandler.h  TwoStringCommandLineHandler.h
clu/InputSource/: FileInputReader.cpp  FileInputReader.h  InputFileOperator.h  InputSource.cpp  InputSource.h  MultipleInputSource.cpp  MultipleInputSource.h  PrePostInputReader.cpp  PrePostInputSource.h  StandardInputSource.cpp  StandardInputSource.h
clu/Operators/: AccumulatedCountOperator.cpp  AggregateOperator.cpp  AggregateOperator.h  ArgOperator.cpp  AvgOperator.cpp  BindedPrefixRegexOperator.cpp  BucketOperator.cpp  ConcurrentSystemOperator.cpp  ConsolidateOperator.cpp  CounterOperator.cpp  DisplayOperator.cpp  ErrorCodeOperator.cpp  EveryOperator.cpp  ExtendedFormatOperator.cpp  FileMergeOperator.cpp  FileOutputHandler.cpp  FileSystemOperator.cpp  FilterOperator.cpp  FormatOperator.cpp  FullFileOperator.cpp  FullFileOperator.h  HeadOperator.cpp  HelpOperator.cpp  HistogramOperator.cpp  KeyMergerOperator.cpp  LengthOperator.cpp  LineConcatOperator.cpp  LinearOperator.cpp  MaxOperator.cpp  MeasureTimeOperator.cpp  MinOperator.cpp  ModuleOperator.cpp  NamedRegexOperator.cpp  NumberOperator.cpp  NumberOperator.h  ParallelOperator.cpp  ParallelOperator.h  PercentileOperator.cpp  PrefixRegexOperator.cpp  RegexHistogramOperator.cpp  (+34 more)
clu/OutputHandlers/: BufferedOutputHandler.cpp  BufferedOutputHandler.h  FileOutputHandler.h  MemoryOutputHandler.cpp  MemoryOutputHandler.h  OutputHandler.cpp  OutputHandler.h  StandardOutputHandler.cpp  StandardOutputHandler.h
clu/Utils/: BlockingTaskQueue.cpp  BlockingTaskQueue.h  ConcurrentQueue.cpp  Globals.cpp  Globals.h  Initialization.cpp  Initialization.h  ProcessingQueue.cpp  ProcessingQueue.h  Task.h  Utils.cpp  Utils.h
compile_clu/: Dockerfile
